--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectName":"trae_profile_git_1ba8"}
+{"projectId":"prj_VvLzDtLbPCzsiK3x3SbXnET2ANyY","orgId":"team_bAcdcZkEuezhqEgza9y229MS","projectName":"trae_profile_git_1ba8","neverMindDeployCard":true}
